--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <commons.text.version>1.8</commons.text.version>
         <lombok.version>1.18.10</lombok.version>
         <junit.version>5.5.2</junit.version>
+        <jwt.version>3.8.3</jwt.version>
+        <jjwt.version>0.10.7</jjwt.version>
 
         <spring.boot.version>2.2.1.RELEASE</spring.boot.version>
     </properties>
@@ -94,13 +96,13 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-tomcat</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mobile</artifactId>
+            <version>1.5.22.RELEASE</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.apache.commons</groupId>
