--- a/spring-creed-common/pom.xml
+++ b/spring-creed-common/pom.xml
@@ -9,7 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <properties>
+        <swagger.version>2.9.2</swagger.version>
+    </properties>
+
     <artifactId>spring-creed-common</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+    </dependencies>
 </project>
