--- a/spring-creed-component/spring-creed-service/pom.xml
+++ b/spring-creed-component/spring-creed-service/pom.xml
@@ -11,5 +11,10 @@
 
     <artifactId>spring-creed-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-dao</artifactId>
+        </dependency>
+    </dependencies>
 </project>
