--- a/spring-creed-component/pom.xml
+++ b/spring-creed-component/pom.xml
@@ -7,16 +7,45 @@
         <groupId>com.ethan</groupId>
         <version>1.0.0</version>
     </parent>
-    <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>spring-creed-component</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>spring-creed-controller</module>
-        <module>spring-creed-model</module>
         <module>spring-creed-service</module>
+        <module>spring-creed-dao</module>
     </modules>
 
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-service</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-controller</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-dao</artifactId>
+                <version>1.0.0</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
+    <dependencies>
+        <!-- core module start -->
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-common</artifactId>
+        </dependency>
+    </dependencies>
 </project>
