--- a/spring-creed-app/src/main/resources/application-dev.yml
+++ b/spring-creed-app/src/main/resources/application-dev.yml
@@ -13,6 +13,17 @@ spring:
       ddl-auto: create
     database-platform: org.hibernate.dialect.H2Dialect
     show-sql: true
+  redis:
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    jedis:
+      pool:
+        max-active: 50
+        max-wait: 3000ms
+        max-idle: 20
+        min-idle: 2
+    timeout: 5000ms
 
 jwt:
   header: Authorization
