--- a/spring-creed-test/pom.xml
+++ b/spring-creed-test/pom.xml
@@ -9,18 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-creed-app</artifactId>
+    <artifactId>spring-creed-test</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.ethan</groupId>
-            <artifactId>spring-creed-controller</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.ethan</groupId>
-            <artifactId>spring-creed-cloud</artifactId>
-        </dependency>
-    </dependencies>
 
 </project>
