--- a/spring-creed-component/pom.xml
+++ b/spring-creed-component/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-creed</artifactId>
         <groupId>com.ethan</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -22,17 +22,17 @@
             <dependency>
                 <groupId>com.ethan</groupId>
                 <artifactId>spring-creed-service</artifactId>
-                <version>1.0.0</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.ethan</groupId>
                 <artifactId>spring-creed-controller</artifactId>
-                <version>1.0.0</version>
+                <version>${revision}</version>
             </dependency>
             <dependency>
                 <groupId>com.ethan</groupId>
                 <artifactId>spring-creed-dao</artifactId>
-                <version>1.0.0</version>
+                <version>${revision}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
