--- a/spring-creed-component/spring-creed-service/pom.xml
+++ b/spring-creed-component/spring-creed-service/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-creed-component</artifactId>
         <groupId>com.ethan</groupId>
-        <version>1.0.0</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
