--- a/spring-creed-context/pom.xml
+++ b/spring-creed-context/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>spring-creed</artifactId>
     <groupId>com.ethan</groupId>
-    <version>1.0.0</version>
+    <version>${revision}</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -18,6 +18,10 @@
   <artifactId>spring-creed-context</artifactId>
 
   <dependencies>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-aspects</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
