--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <module>spring-creed-component</module>
         <module>spring-creed-test</module>
       <module>spring-creed-context</module>
+        <module>spring-creed-auth</module>
     </modules>
 
     <dependencyManagement>
