--- a/spring-creed-auth/pom.xml
+++ b/spring-creed-auth/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-creed</artifactId>
         <groupId>com.ethan</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>${revision}</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,11 +16,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
+
 
         <!--web依赖-->
         <dependency>
