--- a/spring-creed-context/pom.xml
+++ b/spring-creed-context/pom.xml
@@ -13,6 +13,7 @@
     <commons.collections.version>4.4</commons.collections.version>
     <commons.text.version>1.8</commons.text.version>
     <commons.string.version>3.9</commons.string.version>
+    <commons.io.version>2.6</commons.io.version>
   </properties>
 
   <artifactId>spring-creed-context</artifactId>
@@ -39,6 +40,13 @@
       <artifactId>commons-lang3</artifactId>
       <version>${commons.string.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>${commons.io.version}</version>
+    </dependency>
+
 
   </dependencies>
 
