--- a/spring-creed-research/spring-creed-authorization-code/src/main/resources/application.properties
+++ b/spring-creed-research/spring-creed-authorization-code/src/main/resources/application.properties
@@ -1,10 +1,8 @@
-spring.security.user.name=yunai
-spring.security.user.password=1024
-spring.security.user.roles=ADMIN
+server.port=8080
+server.host=localhost
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
 
-
-#logging.level.root=debug
+logging.level.root=debug
