--- a/spring-creed-research/spring-creed-distributed-session/pom.xml
+++ b/spring-creed-research/spring-creed-distributed-session/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-creed-session</artifactId>
+    <artifactId>spring-creed-distributed-session</artifactId>
 
     <dependencies>
         <!-- 实现对 Spring MVC 的自动化配置 -->
@@ -29,6 +29,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <!-- 实现对 Spring Security 的自动化配置 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
     </dependencies>
 
