--- a/spring-creed-research/spring-creed-distributed-session/src/main/resources/application.yml
+++ b/spring-creed-research/spring-creed-distributed-session/src/main/resources/application.yml
@@ -10,4 +10,6 @@ spring:
         max-idle: 8  #连接池中的最大空闲连接
         max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
         min-idle: 0  #连接池中的最小空闲连接
-
+logging:
+  level:
+    root: debug
