--- a/spring-creed-cloud/pom.xml
+++ b/spring-creed-cloud/pom.xml
@@ -25,5 +25,12 @@
             <groupId>com.ethan</groupId>
             <artifactId>spring-creed-core</artifactId>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.12</version>
+        </dependency>
     </dependencies>
 </project>
