--- a/spring-creed-research/pom.xml
+++ b/spring-creed-research/pom.xml
@@ -19,6 +19,7 @@
         <module>spring-creed-auth-draft</module>
         <module>spring-creed-distributed-session</module>
         <module>spring-creed-authorization-code-original</module>
+        <module>spring-creed-auth-rocketmq</module>
     </modules>
 
     <dependencies>
