--- a/spring-creed-research/spring-creed-jasperreports/pom.xml
+++ b/spring-creed-research/spring-creed-jasperreports/pom.xml
@@ -9,15 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-creed-auth-rocketmq</artifactId>
+    <artifactId>spring-creed-jasperreports</artifactId>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/org.apache.rocketmq/rocketmq-spring-boot-starter -->
         <dependency>
-            <groupId>org.apache.rocketmq</groupId>
-            <artifactId>rocketmq-spring-boot-starter</artifactId>
-            <version>2.0.4</version>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.11.0</version>
         </dependency>
     </dependencies>
-
 </project>
