--- a/spring-creed-research/spring-creed-mybatis-plus/src/main/resources/application.yml
+++ b/spring-creed-research/spring-creed-mybatis-plus/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     console:
       path: /h2-console
       enabled: true
+  jpa:
+    hibernate:
+      ddl-auto: create
 
 # Logger Config
 logging:
