--- a/spring-creed-research/pom.xml
+++ b/spring-creed-research/pom.xml
@@ -24,6 +24,7 @@
         <module>spring-creed-dubbo-component</module>
         <module>spring-creed-mybatis-plus</module>
         <module>spring-creed-jasperreports</module>
+      <module>spring-creed-jpa</module>
     </modules>
 
     <dependencies>
