--- a/spring-creed-research/spring-creed-jpa/src/main/resources/application.yml
+++ b/spring-creed-research/spring-creed-jpa/src/main/resources/application.yml
@@ -9,7 +9,18 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+    show-sql: true
+    properties:
+      hibernate:
+#        format_sql: true
+        use_sql_comments: true
   h2:
     console:
       enabled: true
       path: /h2-console
+
+logging:
+  level:
+    org:
+      hibernate:
+        type: trace
