--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,18 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.mapstruct/mapstruct -->
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct</artifactId>
+                <version>1.3.1.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mapstruct</groupId>
+                <artifactId>mapstruct-processor</artifactId>
+                <version>1.3.1.Final</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.ethan</groupId>
                 <artifactId>spring-creed-cache</artifactId>
