--- a/spring-creed-research/spring-creed-jpa/src/main/resources/application.yml
+++ b/spring-creed-research/spring-creed-jpa/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
     properties:
       hibernate:
 #        format_sql: true
-        use_sql_comments: true
+#        use_sql_comments: true
   h2:
     console:
       enabled: true
@@ -23,4 +23,7 @@ logging:
   level:
     org:
       hibernate:
-        type: trace
+        type:
+          descriptor:
+            sql:
+              BasicBinder: trace
