update spring session

--- a/spring-creed-auth/pom.xml
+++ b/spring-creed-auth/pom.xml
@@ -33,6 +33,11 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.lettuce</groupId>
+            <artifactId>lettuce-core</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>com.ethan</groupId>
