--- a/spring-creed-app/pom.xml
+++ b/spring-creed-app/pom.xml
@@ -17,20 +17,34 @@
             <artifactId>spring-creed-controller</artifactId>
         </dependency>-->
 
-        <dependency>
-            <groupId>com.ethan</groupId>
-            <artifactId>spring-creed-auth</artifactId>
-        </dependency>
+      <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-data-jpa</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+        <scope>runtime</scope>
+      </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+      <dependency>
+          <groupId>com.ethan</groupId>
+          <artifactId>spring-creed-auth</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>com.ethan</groupId>
+          <artifactId>spring-creed-context</artifactId>
+      </dependency>
+
+      <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-thymeleaf -->
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-web</artifactId>
+      </dependency>
     </dependencies>
 
 </project>
