--- a/spring-creed-app/src/main/resources/application.yml
+++ b/spring-creed-app/src/main/resources/application.yml
@@ -12,10 +12,35 @@ spring:
     suffix: .html
     cache: false
 
+#  redis:
+#    database: 0     # Redis 数据库号，默认为 0
+#    host: 127.0.0.1
+#    port: 6379
+#    timeout: 5000s  # 连接超时时长（毫秒）
+#    lettuce:
+#      pool:
+#        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
+#        max-idle: 8  #连接池中的最大空闲连接
+#        max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
+#        min-idle: 0  #连接池中的最小空闲连接
+#      shutdown-timeout: 100 # 关闭超时时间
+
 multi:
   redis:
-    redisSession:
+    redisMain:
       database: 0     # Redis 数据库号，默认为 0
+      host: 127.0.0.1
+      port: 6379
+      timeout: 5000s  # 连接超时时长（毫秒）
+      lettuce:
+        pool:
+          max-active: 8 #连接池最大连接数（使用负值表示没有限制）
+          max-idle: 8  #连接池中的最大空闲连接
+          max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
+          min-idle: 0  #连接池中的最小空闲连接
+        shutdown-timeout: 100 # 关闭超时时间
+    redisSession:
+      database: 10     # Redis 数据库号，默认为 0
       host: 127.0.0.1
       port: 6379
       timeout: 5000s  # 连接超时时长（毫秒）
@@ -72,3 +97,6 @@ caffeine:
 
 logging:
   config: classpath:logback-spring.xml
+  dir: ${user.dir}
+#  level:
+#    root: debug
