--- a/spring-creed-context/pom.xml
+++ b/spring-creed-context/pom.xml
@@ -14,6 +14,7 @@
     <commons.text.version>1.8</commons.text.version>
     <commons.string.version>3.9</commons.string.version>
     <commons.io.version>2.6</commons.io.version>
+    <commons.pool2.version>2.8.0</commons.pool2.version>
   </properties>
 
   <artifactId>spring-creed-context</artifactId>
@@ -45,6 +46,12 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>${commons.io.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-pool2</artifactId>
+      <version>${commons.pool2.version}</version>
     </dependency>
 
 
