--- a/spring-creed-research/spring-creed-sso-component/spring-creed-oauth-client/pom.xml
+++ b/spring-creed-research/spring-creed-sso-component/spring-creed-oauth-client/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-creed-sso-app2</artifactId>
+  <artifactId>spring-creed-oauth-client</artifactId>
 
 
 </project>
