--- a/spring-creed-research/spring-creed-jasperreports/pom.xml
+++ b/spring-creed-research/spring-creed-jasperreports/pom.xml
@@ -12,10 +12,10 @@
     <artifactId>spring-creed-jasperreports</artifactId>
 
     <dependencies>
-        <dependency>
+        <!--<dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
             <version>6.11.0</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 </project>
