--- a/spring-creed-research/spring-creed-sso-component/spring-creed-sso-client/pom.xml
+++ b/spring-creed-research/spring-creed-sso-component/spring-creed-sso-client/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>spring-creed-sso-app1</artifactId>
+  <artifactId>spring-creed-sso-client</artifactId>
 
   <dependencies>
     <dependency>
