--- a/spring-creed-authorization-server/src/main/resources/application.yml
+++ b/spring-creed-authorization-server/src/main/resources/application.yml
@@ -45,8 +45,8 @@ multi:
       timeout: 5000s  # 连接超时时长（毫秒）
       lettuce:
         pool:
-          max-active: 8 #连接池最大连接数（使用负值表示没有限制）
-          max-idle: 8  #连接池中的最大空闲连接
+          max-active: 2 #连接池最大连接数（使用负值表示没有限制）
+          max-idle: 2  #连接池中的最大空闲连接
           max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
           min-idle: 0  #连接池中的最小空闲连接
         shutdown-timeout: 100 # 关闭超时时间
@@ -57,8 +57,8 @@ multi:
       timeout: 5000s  # 连接超时时长（毫秒）
       lettuce:
         pool:
-          max-active: 8 #连接池最大连接数（使用负值表示没有限制）
-          max-idle: 8  #连接池中的最大空闲连接
+          max-active: 2 #连接池最大连接数（使用负值表示没有限制）
+          max-idle: 2  #连接池中的最大空闲连接
           max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
           min-idle: 0  #连接池中的最小空闲连接
         shutdown-timeout: 100 # 关闭超时时间
@@ -66,5 +66,5 @@ multi:
 logging:
   config: classpath:logback-spring.xml
   dir: ${user.dir}
-#  level:
-#    root: debug
+  level:
+    root: debug
