--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
         <module>spring-creed-redis-multiple</module>
         <module>spring-creed-authorization-server</module>
         <module>spring-creed-data-source-multiple</module>
+        <module>spring-creed-gradation-cache</module>
     </modules>
 
     <dependencyManagement>
@@ -157,6 +158,12 @@
                 <artifactId>spring-creed-redis-multiple</artifactId>
                 <version>${revision}</version>
             </dependency>
+            <!-- spring-creed-gradation-cache -->
+            <dependency>
+                <groupId>com.ethan</groupId>
+                <artifactId>spring-creed-gradation-cache</artifactId>
+                <version>${revision}</version>
+            </dependency>
 
             <dependency>
                 <groupId>com.ethan</groupId>
@@ -260,5 +267,14 @@
             <scope>test</scope>
             <version>${junit.platform.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mockito/mockito-junit-jupiter -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>3.2.4</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
