--- a/spring-creed-gradation-cache/pom.xml
+++ b/spring-creed-gradation-cache/pom.xml
@@ -3,32 +3,48 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring-creed-research</artifactId>
+        <artifactId>spring-creed</artifactId>
         <groupId>com.ethan</groupId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>spring-creed-auth-locallock</artifactId>
+    <artifactId>spring-creed-gradation-cache</artifactId>
+
+    <properties>
+        <caffeine.cache.version>2.8.2</caffeine.cache.version>
+    </properties>
 
     <dependencies>
         <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-context</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ethan</groupId>
+            <artifactId>spring-creed-redis-multiple</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.ben-manes.caffeine</groupId>
             <artifactId>caffeine</artifactId>
-            <version>2.8.1</version>
+            <version>${caffeine.cache.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-aop</artifactId>
+            <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
-        <dependency>
-            <groupId>com.ethan</groupId>
-            <artifactId>spring-creed-context</artifactId>
-        </dependency>
+
     </dependencies>
+
 
 </project>
