--- a/spring-creed-app-standalone/src/main/resources/application.yml
+++ b/spring-creed-app-standalone/src/main/resources/application.yml
@@ -12,18 +12,56 @@ spring:
     suffix: .html
     cache: false
 
-#  redis:
-#    database: 0     # Redis 数据库号，默认为 0
-#    host: 127.0.0.1
-#    port: 6379
-#    timeout: 5000s  # 连接超时时长（毫秒）
-#    lettuce:
-#      pool:
-#        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
-#        max-idle: 8  #连接池中的最大空闲连接
-#        max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
-#        min-idle: 0  #连接池中的最小空闲连接
-#      shutdown-timeout: 100 # 关闭超时时间
+  redis:
+    database: 0     # Redis 数据库号，默认为 0
+    host: 127.0.0.1
+    port: 6379
+    timeout: 5000s  # 连接超时时长（毫秒）
+    lettuce:
+      pool:
+        max-active: 8 #连接池最大连接数（使用负值表示没有限制）
+        max-idle: 8  #连接池中的最大空闲连接
+        max-wait: -1s #连接池最大阻塞等待时间（使用负值表示没有限制)
+        min-idle: 0  #连接池中的最小空闲连接
+      shutdown-timeout: 100 # 关闭超时时间
+#   缓存配置
+  gradation:
+    cache_user:
+      depict: "用户缓存"
+      useFirstCache: true
+      allowNullValue: false
+      caffeineCache:
+        initialCapacity: 20
+        maximumSize: 500
+        expireTime: 599
+        timeUnit: seconds
+        expireMode: EXPIRE_AFTER_ACCESS
+        stats: false
+        weakValues: true
+        weakKeys: false
+      redisCache:
+        expiration: 1199
+        preloadTime: 24
+        timeUnit: MINUTES
+        forceRefresh: false
+        usePrefix: true
+        magnification: 1
+        stats: false
+    cache_blog:
+      depict: "博客缓存"
+      allow-null-value: true
+      use-first-cache: false
+      caffeineCache:
+        initial-capacity: 11
+        expire-time: 11
+        maximum-size: 100
+        time-unit: seconds
+        expire-mode: expire_after_write
+        stats: false
+      redisCache:
+        expiration: 11
+        preload-time: 22
+        time-unit: seconds
 
 multi:
   redis:
@@ -83,17 +121,6 @@ swagger2:
   enable: true
   basePackage: com.ethan.controller
   pathRegex: /api*
-
-caffeine:
-  configs:
-    - cacheName: short-term-cache
-      initialCapacity: 50
-      maximumSize: 500
-      expireAfterWriteMins: 50
-    - cacheName: long-term-cache
-      initialCapacity: 5
-      maximumSize: 50
-      expireAfterWriteMins: 300
 
 logging:
   config: classpath:logback-spring.xml
