--- a/spring-creed-research/pom.xml
+++ b/spring-creed-research/pom.xml
@@ -12,6 +12,7 @@
     <artifactId>spring-creed-research</artifactId>
     <packaging>pom</packaging>
     <modules>
+        <module>spring-creed-cache</module>
         <module>spring-creed-authorization-code</module>
         <module>spring-creed-security</module>
         <module>spring-creed-implicit-code</module>
@@ -22,8 +23,8 @@
         <module>spring-creed-dubbo-component</module>
         <module>spring-creed-mybatis-plus</module>
         <module>spring-creed-jasperreports</module>
-      <module>spring-creed-jpa</module>
-      <module>spring-creed-sso-component</module>
+        <module>spring-creed-jpa</module>
+        <module>spring-creed-sso-component</module>
     </modules>
 
     <dependencies>
