--- a/spring-creed-example/spring-creed-distributed-session/build.gradle
+++ b/spring-creed-example/spring-creed-distributed-session/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.boot:spring-boot-starter-data-redis"
+    compile "org.springframework.session:spring-session-data-redis"
     compile "org.springframework.boot:spring-boot-starter-security"
 
 //    compile project(":spring-creed-mvc:spring-creed-context")
