--- a/spring-creed-example/spring-creed-sso-component/spring-creed-sso-client/build.gradle
+++ b/spring-creed-example/spring-creed-sso-component/spring-creed-sso-client/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+    compile 'org.springframework.boot:spring-boot-starter-hateoas'
+    compile 'org.springframework.hateoas:spring-hateoas'
     compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-rest'
