--- a/spring-creed-mvc/spring-creed-authorization-server/build.gradle
+++ b/spring-creed-mvc/spring-creed-authorization-server/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.boot:spring-boot-starter-data-jpa"
     compile "org.springframework.boot:spring-boot-starter-web"
     compile "org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure"
     compile "org.springframework.boot:spring-boot-starter-thymeleaf"
